ipc/ipdl/test/ipdl/error/intrMessageCompress.ipdl
intr protocol intrMessageCompress {
parent:
    intr foo() compress;
child:
    intr bar() compress;
};
